# cadence

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  ca_law_enforcement_websites.csv  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 01dcc9e5d8c1_create_agency_registry_tables.py  b8f2e1a9c43d_add_crimemapping_agency_id.py  c1f3a2b4d5e6_add_last_error_to_agency_feeds.py  d2e4f6a8b0c2_add_parse_runs_table.py  e3f5a7b9c1d3_add_documents_table.py
config/: settings.py
docs/: phase2-registry-enrichment.md
reports/: ingest_20260220_193013.csv  ingest_20260220_193908.csv  ingest_20260220_194633.csv  ingest_20260220_194649.csv  ingest_20260220_195410.csv  ingest_20260220_195525.csv  ingest_20260220_195633.csv  ingest_20260220_195720.csv  phase2_validation.csv  platform_enrichment_20260220.csv
schema/: phase3_tables.sql
scripts/: classify_regions.py  create_pdf_fixtures.py  discover_crimemapping_ids.py  discover_feed_urls.py  enrich_platforms.py  import_csv.py  phase1_status.py  run_worker.py  test_scrape.py  validate_ingest.py
src/api/: deps.py  main.py  registry_routes.py  scheduler_routes.py  schemas.py
src/dedup/: __init__.py  deduplicator.py
src/embedding/: README.md
src/foia/: README.md
src/parsers/: README.md  __init__.py  base.py  health.py  health_monitor.py  platform_arcgis.py  platform_citizenrims.py  platform_civicplus.py  platform_crimemapping.py  platform_nixle.py  platform_pdf.py  platform_rss.py  platform_socrata.py
src/processing/: README.md  classify_document.py  clean_document.py
src/registry/: models.py
tests/: test_classify_document.py  test_clean_document.py  test_dedup_deduplicator.py  test_parsers_base.py  test_parsers_platform_arcgis.py  test_parsers_platform_civicplus.py  test_parsers_platform_crimemapping.py  test_parsers_platform_nixle.py  test_parsers_platform_pdf.py  test_parsers_platform_rss.py  test_parsers_platform_socrata.py
(+11 files in other folders)
