[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cadence"
version = "0.1.0"
description = "California law enforcement intelligence aggregation platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "playwright>=1.44.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "temporalio>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit real external APIs (deselect with '-k not integration')",
]
